--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint"
   },
@@ -15,9 +14,10 @@
     "@react-navigation/bottom-tabs": "^7.7.3",
     "@react-navigation/elements": "^2.8.1",
     "@react-navigation/native": "^7.1.28",
+    "@rnrepo/expo-config-plugin": "^0.2.2-beta.0",
     "expo": "~55.0.0-preview.7",
     "expo-constants": "~55.0.2",
-    "expo-font": "~55.0.3",
+    "expo-font": "~55.0.2",
     "expo-glass-effect": "~55.0.3",
     "expo-image": "~55.0.3",
     "expo-linking": "~55.0.3",
@@ -31,11 +31,11 @@
     "react-dom": "19.2.0",
     "react-native": "0.83.1",
     "react-native-gesture-handler": "~2.30.0",
-    "react-native-worklets": "0.7.2",
     "react-native-reanimated": "~4.2.1",
     "react-native-safe-area-context": "~5.6.2",
     "react-native-screens": "~4.20.0",
-    "react-native-web": "~0.21.0"
+    "react-native-web": "~0.21.0",
+    "react-native-worklets": "0.7.2"
   },
   "devDependencies": {
     "@types/react": "~19.2.2",
