--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@rnrepo/expo-config-plugin": "^0.2.2-beta.0",
     "expo": "~55.0.0-preview.7",
     "expo-constants": "~55.0.2",
+    "expo-dev-client": "~55.0.2",
     "expo-font": "~55.0.2",
     "expo-glass-effect": "~55.0.3",
     "expo-image": "~55.0.3",
