--- a/.eas/workflows/create-dev-builds.yaml
+++ b/.eas/workflows/create-dev-builds.yaml
@@ -22,4 +22,4 @@ jobs:
   #   type: build
   #   params:
   #     platform: ios
-  #     profile: development-simulator
+  #     profile: ios-simulator
