--- a/eas.json
+++ b/eas.json
@@ -6,11 +6,13 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal"
-    },
-    "development-simulator": {
-      "developmentClient": true,
       "distribution": "internal",
+      "env": {
+        "APP_ENV": "development"
+      }
+    },
+    "ios-simulator": {
+      "extends": "development",
       "ios": {
         "simulator": true
       }
