--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-font": "~55.0.2",
     "expo-glass-effect": "~55.0.3",
     "expo-image": "~55.0.3",
+    "expo-insights": "~55.0.5",
     "expo-linking": "~55.0.3",
     "expo-router": "~55.0.0-beta.4",
     "expo-splash-screen": "~55.0.3",
